# suiron-rust

./: Cargo.toml  LICENSE.txt  README.md  build.rs  test
benches/: suiron_benchmark.rs
src/: benchmark.rs  built_in_append.rs  built_in_arithmetic.rs  built_in_comparison.rs  built_in_count.rs  built_in_filter.rs  built_in_functions.rs  built_in_functor.rs  built_in_join.rs  built_in_predicates.rs  built_in_print.rs  built_in_print_list.rs  goal.rs  infix.rs  knowledge_base.rs  lib.rs  logic_var.rs  macros.rs  main.rs  operator.rs  parse_goals.rs  parse_stack.rs  parse_terms.rs  rule.rs  rule_reader.rs  s_complex.rs  s_linked_list.rs  solution_node.rs  solution_node_and_or.rs  solutions.rs  substitution_set.rs  time_out.rs  token.rs  tokenizer.rs  unifiable.rs  unify.rs
suiron_demo/: Cargo.toml  build.rs  make_docs
suiron_demo/src/: demo_grammar.txt  part_of_speech.rs  part_of_speech.txt  sentence.rs  suiron_demo.rs
tests/: and_or_test.rs  append_test.rs  arithmetic_test.rs  backchaining_test.rs  comparison_test.rs  constants_test.rs  count_test.rs  fail_test.rs  filter_test.rs  functor_test.rs  join_test.rs  qsort.txt
