[package]
name = "suiron-rust"
version = "0.1.0"
edition = "2021"
description = "A fast Prolog-like inference engine."
license = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "query"
path = "src/main.rs"

[lib]
name = "suiron"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_timer = "*"

[dev-dependencies]
serial_test = "*"
