[package]
name = "suiron-rust"
version = "0.1.0"
edition = "2021"
description = "A fast Prolog-like inference engine."
license = "MIT"

[profile.dev]
opt-level = 2

[profile.release]
strip = true
opt-level = 2
panic = "abort"    # Needed

[profile.bench]
opt-level = 2

[[bin]]
name = "query"
path = "src/main.rs"

[lib]
name = "suiron"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_timer = "*"

[dev-dependencies]
serial_test = "*"
criterion = "0.3"

[[bench]]
name = "suiron_benchmark"
harness = false
