[package]
name = "suiron-rust"
version = "0.1.0"
edition = "2021"
description = "A fast Prolog-like inference engine."
license = "MIT"
repository = "https://github.com/Indrikoterio/suiron-rust"

[profile.dev]
opt-level = 2

[profile.release]
strip = true
opt-level = 2
panic = "abort"    # Needed

[profile.bench]
opt-level = 2

[[bin]]
name = "query"
path = "src/main.rs"

[lib]
name = "suiron"
path = "src/lib.rs"

[dependencies]
thread_timer = "0.3.0"

[dev-dependencies]
serial_test = "0.4.0"
criterion = "0.3"

[[bench]]
name = "suiron_benchmark"
harness = false
