[package]
name = "suiron_demo"
description = "A demo of the Suiron inference engine."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "suiron_demo"
path = "src/suiron_demo.rs"

[lib]
name = "suiron"
path = "../src/lib.rs"

[dependencies]
thread_timer = "*"

[dev-dependencies]
serial_test = "*"

[profile.dev]
opt-level = 2

[profile.release]
strip = true
opt-level = 2
panic = "abort"    # Needed
